--- a/emacs.org
+++ b/emacs.org
@@ -1924,19 +1924,20 @@ We want to be able to edit CMake files in a sane way.
             (global-whitespace-mode t)
 
             (setq show-trailing-whitespace t)
-            ;;(add-hook 'before-save-hook 'delete-trailing-whitespace)
-            ;;(setq whitespace-line-column 79)
-            (setq whitespace-style
-                  '(face trailing indentation))
-            ;;      '(face lines-tail trailing indentation))
 
-            ;;  indentation::tab indentation::space tabs tab-mark spaces space-mark
+            (setq whitespace-display-mappings
+                  ;; all numbers are Unicode codepoint in decimal. ⁖ (insert-char 182 1)
+                  '(
+                    (space-mark 32 [183] [46]) ; 32 SPACE 「 」, 183 MIDDLE DOT 「·」, 46 FULL STOP 「.」
+                    (newline-mark 10 [182 10]) ; 10 LINE FEED
+                    (tab-mark 9 [9655 9] [92 9]) ; 9 TAB, 9655 WHITE RIGHT-POINTING TRIANGLE 「▷」
+                    ))
 
-            (setq whitespace-global-modes '(c-mode c++-mode ruby-mode swift-mode
-                                                   erlang-mode js2-mode elisp-mode))))
+            (set-face-attribute 'whitespace-space nil :background nil :foreground "gray30")
+            (set-face-attribute 'whitespace-tab nil :background nil :foreground "gray30")
+            (set-face-attribute 'whitespace-newline nil :background nil :foreground "gray30")
 
-    ;;(custom-set-faces
-    ;; '(whitespace-trailing ((t (:background "#f2777a" :weight bold))))))
+            (setq whitespace-style '(face tabs spaces trailing space-before-tab newline indentation empty space-after-tab space-mark tab-mark newline-mark))))
 #+end_src
 
 ** YAML support
