--- a/emacs.org
+++ b/emacs.org
@@ -1922,22 +1922,8 @@ We want to be able to edit CMake files in a sane way.
   (use-package whitespace
     :init (progn
             (global-whitespace-mode t)
-
             (setq show-trailing-whitespace t)
-
-            (setq whitespace-display-mappings
-                  ;; all numbers are Unicode codepoint in decimal. ⁖ (insert-char 182 1)
-                  '(
-                    (space-mark 32 [183] [46]) ; 32 SPACE 「 」, 183 MIDDLE DOT 「·」, 46 FULL STOP 「.」
-                    (newline-mark 10 [182 10]) ; 10 LINE FEED
-                    (tab-mark 9 [9655 9] [92 9]) ; 9 TAB, 9655 WHITE RIGHT-POINTING TRIANGLE 「▷」
-                    ))
-
-            (set-face-attribute 'whitespace-space nil :background nil :foreground "gray30")
-            (set-face-attribute 'whitespace-tab nil :background nil :foreground "gray30")
-            (set-face-attribute 'whitespace-newline nil :background nil :foreground "gray30")
-
-            (setq whitespace-style '(face tabs spaces trailing space-before-tab newline indentation empty space-after-tab space-mark tab-mark newline-mark))))
+            (setq whitespace-style '(face trailing))))
 #+end_src
 
 ** YAML support
