--- a/emacs.org
+++ b/emacs.org
@@ -2271,6 +2271,19 @@ Because it’s not much mail!
 
               (helm-mode 1)
 
+              (setq helm-completing-read-handlers-alist '((describe-function . helm-completing-read-symbols)
+                                                          (describe-variable . helm-completing-read-symbols)
+                                                          (describe-symbol . helm-completing-read-symbols)
+                                                          (debug-on-entry . helm-completing-read-symbols)
+                                                          (find-function . helm-completing-read-symbols)
+                                                          (disassemble . helm-completing-read-symbols)
+                                                          (trace-function . helm-completing-read-symbols)
+                                                          (trace-function-foreground . helm-completing-read-symbols)
+                                                          (trace-function-background . helm-completing-read-symbols)
+                                                          (find-tag . helm-completing-read-with-cands-in-buffer)
+                                                          (ffap-alternate-file)
+                                                          (tmm-menubar)))
+
               (helm-autoresize-mode t)
 
               (global-set-key (kbd "M-y") 'helm-show-kill-ring)
