--- a/emacs.org
+++ b/emacs.org
@@ -463,57 +463,6 @@ point reaches the beginning or end of the buffer, stop there."
 #+end_src
 
 
-*** RGB notation to hex
-
-    As a web developer I often get colors as RGB values. In CSS they
-    have to be notated in hex; to shorten that I wrote a little
-    =defun=.
-
-#+begin_src emacs-lisp
-(defun region-to-hexcol ()
-  (interactive)
-  (let
-      ((start (region-beginning))
-       (end (region-end))
-       (text))
-
-    (setq text (buffer-substring-no-properties start end))
-
-    (when (string-match "^[[:digit:]]+$" text)
-      (setq text (format "%02x" (string-to-number text)))
-      (delete-region start end)
-      (insert text))))
-
-(defun rgb-to-hex ()
-  (interactive)
-
-  (let
-      ((start (region-beginning))
-       (end (region-end)))
-
-    (goto-char start)
-    (set-mark start)
-    (skip-chars-forward "0-9")
-    (region-to-hexcol)
-
-    (skip-chars-forward ", ")
-    (set-mark (point))
-    (skip-chars-forward "0-9")
-    (region-to-hexcol)
-
-    (skip-chars-forward ", ")
-    (set-mark (point))
-    (skip-chars-forward "0-9")
-    (region-to-hexcol)
-
-    (setq end (point))
-    (goto-char start)
-
-    (save-restriction
-      (narrow-to-region start end)
-      (while (re-search-forward "[, ]" nil t) (replace-match "" nil t)))))
-#+end_src
-
 *** Kill all buffers
 
 #+begin_src emacs-lisp
@@ -560,26 +509,7 @@ point reaches the beginning or end of the buffer, stop there."
 
             (setq projectile-indexing-method 'find
                   projectile-enable-caching t
-                  projectile-create-missing-test-files t)
-
-            (defun build-ctags ()
-              (interactive)
-              (message "building project tags")
-              (let ((root (projectile-project-root))
-                    (ctags (if (ck/is-osx)
-                               "/usr/local/bin/ctags"
-                             "/usr/bin/ctags")))
-                (if (string-match "/ios/" root)
-                    (shell-command (concat "find " root " -name '*.[hm]' | xargs /usr/local/bin/etags"))
-                  (shell-command (concat ctags " -e -R --extra=+fq --exclude=db --exclude=test --exclude=.git --exclude=public -f " root "/TAGS " root))))
-              (visit-project-tags)
-              (message "tags built successfully"))
-
-            (defun visit-project-tags ()
-              (interactive)
-              (let ((tags-file (concat (projectile-project-root) "/TAGS")))
-                (visit-tags-table tags-file)
-                (message (concat "Loaded " tags-file))))))
+                  projectile-create-missing-test-files t)))
 #+end_src
 
 ** Keyboard shortcuts
@@ -1081,36 +1011,6 @@ We want to be able to edit CMake files in a sane way.
               (setq magit-last-seen-setup-instructions "2.1.0")))
 #+end_src
 
-** mail-mode
-
-   Just a few modifications such as colors and such.
-
-#+begin_src emacs-lisp
-(add-to-list 'auto-mode-alist '("mutt-" . mail-mode))
-(add-to-list 'auto-mode-alist '("kmail" . mail-mode))
-(add-to-list 'auto-mode-alist '(".eml" . mail-mode))
-
-
-(defface mail-double-quoted-text-face
-  '((((class color)) :foreground "SteelBlue")) "Double-quoted email.")
-(defface mail-treble-quoted-text-face
-  '((((class color)) :foreground "SlateGrey")) "Treble-quoted email.")
-(defface mail-multiply-quoted-text-face
-  '((((class color)) :foreground "DarkSlateGrey")) "Multiply-quoted email.")
-
-(font-lock-add-keywords 'mail-mode
-                        '(("^\\(\\( *>\\)\\{4,\\}\\)\\(.*\\)$"
-                           (1 'font-lock-comment-delimiter-face)
-                           (3 'mail-multiply-quoted-text-face))
-                          ("^\\(\\( *>\\)\\{3\\}\\)\\(.*\\)$"
-                           (1 'font-lock-comment-delimiter-face)
-                           (3 'mail-treble-quoted-text-face))
-                          ("^\\( *> *>\\)\\(.*\\)$"
-                           (1 'font-lock-comment-delimiter-face)
-                           (2 'mail-double-quoted-text-face))))
-
-(add-hook 'mail-mode-hook 'turn-on-auto-fill)
-#+end_src
 
 ** markdown support
 
@@ -1168,51 +1068,6 @@ We want to be able to edit CMake files in a sane way.
             (add-hook 'php-mode-hook 'ck-init-php)))
 #+end_src
 
-** Rails integration
-
-   We use RVM (and thus =rvm-mode=) and =projectile-rails=.
-
-#+begin_src emacs-lisp
-  (use-package rvm
-    :commands rvm-use-default
-    :init (progn
-            (setq rvm--current-ruby nil)
-            (add-hook 'ruby-mode-hook (lambda ()
-                                        (interactive)
-                                        (when (not rvm--current-ruby)
-                                          (rvm-use-default))))))
-
-  (use-package projectile-rails
-    :commands projectile-rails-on
-    :init
-    (add-hook 'projectile-mode-hook 'projectile-rails-on))
-
-  (defun get-current-test-name ()
-    (save-excursion
-      (let ((pos)
-            (test-name))
-        (re-search-backward "test \"\\([^\"]+\\)\" do")
-        (setq test-name (buffer-substring-no-properties (match-beginning 1) (match-end 1)))
-        (concat "test_" (replace-regexp-in-string " " "_" test-name)))))
-
-
-  (defun run-test-at-point ()
-    (interactive)
-    (let ((root-dir (projectile-project-root)))
-      (compile (format "ruby -Ilib:test -I%s/test %s -n %s" root-dir (expand-file-name (buffer-file-name)) (get-current-test-name)))))
-
-  (defun run-test-file ()
-    (interactive)
-    (let ((root-dir (projectile-project-root))
-          (filename (expand-file-name (buffer-file-name))))
-      (setq filename (replace-regexp-in-string root-dir "" filename))
-      (compile (format "rake test %s" filename))))
-
-  (defun run-test-suite ()
-    (interactive)
-    (compile "rake test"))
-#+end_src
-
 ** rainbow-delimiters
 
    [[https://github.com/jlr/rainbow-delimiters][Rainbow delimiters]] is a “rainbow parentheses”-like mode which
@@ -1253,8 +1108,6 @@ We want to be able to edit CMake files in a sane way.
             (add-to-list 'auto-mode-alist '("\\.prawn$" . ruby-mode))
             (add-to-list 'auto-mode-alist '("\\.xlsx\\.axlsx$" . ruby-mode))
 
-            (define-key ck/keys-minor-mode-map (kbd "C-c r r") 'inf-ruby)
-
             (require 'ruby-hash-syntax)
 
             (define-key ck/keys-minor-mode-map "\C-ccr"
@@ -1262,27 +1115,28 @@ We want to be able to edit CMake files in a sane way.
                   "Ruby"
                   ("h" ruby-toggle-hash-syntax "Toggle ruby Hash syntax")))
 
-            (defadvice ruby-indent-line (after line-up-args activate)
-              (let (indent prev-indent arg-indent)
-                (save-excursion
-                  (back-to-indentation)
-                  (when (zerop (car (syntax-ppss)))
-                    (setq indent (current-column))
-                    (skip-chars-backward " \t\n")
-                    (when (eq ?, (char-before))
-                      (ruby-backward-sexp)
-                      (back-to-indentation)
-                      (setq prev-indent (current-column))
-                      (skip-syntax-forward "w_.")
-                      (skip-chars-forward " ")
-                      (setq arg-indent (+ (ruby-current-indentation) ruby-indent-level))))) ;; (current-column)
-                (when prev-indent
-                  (let ((offset (- (current-column) indent)))
-                    (cond ((< indent prev-indent)
-                           (indent-line-to prev-indent))
-                          ((= indent prev-indent)
-                           (indent-line-to arg-indent)))
-                    (when (> offset 0) (forward-char offset))))))))
+            ;; (defadvice ruby-indent-line (after line-up-args activate)
+            ;;   (let (indent prev-indent arg-indent)
+            ;;     (save-excursion
+            ;;       (back-to-indentation)
+            ;;       (when (zerop (car (syntax-ppss)))
+            ;;         (setq indent (current-column))
+            ;;         (skip-chars-backward " \t\n")
+            ;;         (when (eq ?, (char-before))
+            ;;           (ruby-backward-sexp)
+            ;;           (back-to-indentation)
+            ;;           (setq prev-indent (current-column))
+            ;;           (skip-syntax-forward "w_.")
+            ;;           (skip-chars-forward " ")
+            ;;           (setq arg-indent (+ (ruby-current-indentation) ruby-indent-level))))) ;; (current-column)
+            ;;     (when prev-indent
+            ;;       (let ((offset (- (current-column) indent)))
+            ;;         (cond ((< indent prev-indent)
+            ;;                (indent-line-to prev-indent))
+            ;;               ((= indent prev-indent)
+            ;;                (indent-line-to arg-indent)))
+            ;;         (when (> offset 0) (forward-char offset))))))
+            ))
 #+end_src
 
 ** Rust support
@@ -1323,10 +1177,10 @@ We want to be able to edit CMake files in a sane way.
               (custom-set-variables
                '(sml/hidden-modes (quote (" hl-p" " Helm" " Guide" " ck/keys" " pair" " HRB" " AC" " GitGutter" " FlyC" " FlyC-" " MMM" " Rails" " yas" " SP" " WS" " MRev"))))
 
-              (add-to-list 'sml/replacer-regexp-list '("^~/\\(data/\\)?[Ss]ites/" ":WEB:"))
-              (add-to-list 'sml/replacer-regexp-list '("^~/\\(data/\\)?dev/" ":DEV:"))
-              (add-to-list 'sml/replacer-regexp-list '("^~/\\(data/\\)?dev/postgres/" ":PG:"))
-              (add-to-list 'sml/replacer-regexp-list '("^~/\\(data/\\)?Documents/" ":DOC:"))))
+              (add-to-list 'sml/replacer-regexp-list '("^~/[Ss]ites/" ":WEB:"))
+              (add-to-list 'sml/replacer-regexp-list '("^~/dev/" ":DEV:"))
+              (add-to-list 'sml/replacer-regexp-list '("^~/dev/postgres/" ":PG:"))
+              (add-to-list 'sml/replacer-regexp-list '("^~/Documents/" ":DOC:"))))
 #+end_src
 
 ** SQL
@@ -1338,8 +1192,6 @@ We want to be able to edit CMake files in a sane way.
 
   (add-hook 'sql-mode-hook 'sqlup-mode)
   (add-hook 'sql-interactive-mode-hook 'sqlup-mode)
-
-  (define-key ck/keys-minor-mode-map (kbd "C-c u") 'sqlup-capitalize-keywords-in-region)
 
   (defun sql-indent-string ()
     "Indents the string under the cursor as SQL."
@@ -1717,17 +1569,6 @@ prefix argument."
               (alchemist-mode)))
 #+end_src
 
-** alchemist
-
-#+begin_src emacs-lisp
-  (use-package alchemist
-    :commands alchemist-mode alchemist-iex-run alchemist-iex-project-run
-    :config (progn
-              (setq alchemist-project-compile-when-needed t
-                    alchemist-complete-debug-mode nil
-                    alchemist-hooks-test-on-save t)))
-#+end_src
-
 ** helm
 
 #+begin_src emacs-lisp
@@ -1773,19 +1614,6 @@ prefix argument."
 
 #+end_src
 
-** helm-dash
-
-#+begin_src emacs-lisp
-  (when (not (ck/is-osx))
-    (use-package helm-dash
-      :commands helm-dash helm-dash-at-point
-      :init (progn
-              (define-key ck/keys-minor-mode-map [f1] 'helm-dash-at-point)
-
-              (setq helm-dash-common-docsets '("HTML" "CSS" "Bootstrap 4" "JavaScript"
-                                               "jQuery" "Ruby on Rails" "Ruby" "Go"
-                                               "C" "C++" "Elixir")))))
-#+end_src
 ** puppet
 
 #+begin_src emacs-lisp
@@ -1806,157 +1634,158 @@ prefix argument."
 
 #+begin_src emacs-lisp
   ;; make sure mu4e is in your load-path
-  (use-package mu4e
-    :commands mu4e
-    :init (progn
-            (setq mail-user-agent 'mu4e-user-agent))
-    :config (progn
-              (require 'org-mu4e)
-              (require 'mu4e-contrib)
+  (when (not (ck/is-osx))
+    (use-package mu4e
+      :commands mu4e
+      :init (progn
+              (setq mail-user-agent 'mu4e-user-agent))
+      :config (progn
+                (require 'org-mu4e)
+                (require 'mu4e-contrib)
 
-              (setq mu4e-maildir "~/Mail"
-                    mu4e-sent-folder   "/Defunct/Sent"
-                    mu4e-drafts-folder "/Defunct/Drafts"
-                    mu4e-trash-folder  "/Defunct/Trash"
+                (setq mu4e-maildir "~/Mail"
+                      mu4e-sent-folder   "/Defunct/Sent"
+                      mu4e-drafts-folder "/Defunct/Drafts"
+                      mu4e-trash-folder  "/Defunct/Trash"
 
-                    mu4e-use-fancy-chars t
-                    mu4e-view-show-images t
-                    mu4e-attachment-dir "~/Downloads"
-                    mu4e-change-filenames-when-moving t
-                    mu4e-headers-full-search t
-                    mu4e-get-mail-command "true"
-                    mu4e-update-interval 60
-                    mu4e-hide-index-messages t
-                    mu4e-hide-index-messages t
-                    mu4e-view-show-addresses t
-                    mu4e-completing-read-function 'completing-read
-                    mu4e-msg2pdf "/usr/bin/msg2pdf")
+                      mu4e-use-fancy-chars t
+                      mu4e-view-show-images t
+                      mu4e-attachment-dir "~/Downloads"
+                      mu4e-change-filenames-when-moving t
+                      mu4e-headers-full-search t
+                      mu4e-get-mail-command "true"
+                      mu4e-update-interval 60
+                      mu4e-hide-index-messages t
+                      mu4e-hide-index-messages t
+                      mu4e-view-show-addresses t
+                      mu4e-completing-read-function 'completing-read
+                      mu4e-msg2pdf "/usr/bin/msg2pdf")
 
-              (setq mu4e-headers-fields
-                    '( (:human-date    .   12)
-                       (:flags         .    6)
-                       (:maildir       .   22)
-                       (:mailing-list  .   10)
-                       (:from          .   22)
-                       (:subject       .   nil)))
+                (setq mu4e-headers-fields
+                      '( (:human-date    .   12)
+                         (:flags         .    6)
+                         (:maildir       .   22)
+                         (:mailing-list  .   10)
+                         (:from          .   22)
+                         (:subject       .   nil)))
 
-              (setq mu4e-html2text-command 'mu4e-shr2text
-                    mime-edit-split-message nil
-                    mime-edit-pgp-signers '("A99A9D73")
-                    mime-edit-pgp-encrypt-to-self t
-                    message-send-mail-function 'message-send-mail-with-sendmail
-                    sendmail-program "~/dev/mail/msmtp-enqueue.sh"
-                    message-sendmail-extra-arguments '("-a" "Defunct")
-                    mail-specify-envelope-from t
-                    message-sendmail-f-is-evil nil
-                    mail-envelope-from 'header
-                    mail-interactive t
-                    message-sendmail-envelope-from 'header
-                    user-full-name "Christian Kruse"
-                    message-kill-buffer-on-exit t
-                    mu4e-headers-include-related t)
+                (setq mu4e-html2text-command 'mu4e-shr2text
+                      mime-edit-split-message nil
+                      mime-edit-pgp-signers '("A99A9D73")
+                      mime-edit-pgp-encrypt-to-self t
+                      message-send-mail-function 'message-send-mail-with-sendmail
+                      sendmail-program "~/dev/mail/msmtp-enqueue.sh"
+                      message-sendmail-extra-arguments '("-a" "Defunct")
+                      mail-specify-envelope-from t
+                      message-sendmail-f-is-evil nil
+                      mail-envelope-from 'header
+                      mail-interactive t
+                      message-sendmail-envelope-from 'header
+                      user-full-name "Christian Kruse"
+                      message-kill-buffer-on-exit t
+                      mu4e-headers-include-related t)
 
-              (setq mu4e-refile-folder
-                    (lambda (msg)
-                      (let ((maildir (mu4e-message-field msg :maildir))
-                            (account))
-                        (string-match "/\\(.*?\\)/" maildir)
-                        (setq account (match-string 1 maildir))
-                        (concat "/" account "/Archiv"))))
+                (setq mu4e-refile-folder
+                      (lambda (msg)
+                        (let ((maildir (mu4e-message-field msg :maildir))
+                              (account))
+                          (string-match "/\\(.*?\\)/" maildir)
+                          (setq account (match-string 1 maildir))
+                          (concat "/" account "/Archiv"))))
 
-              (add-to-list 'mu4e-bookmarks
-                           '("(maildir:/Defunct/INBOX or maildir:/Termitel/INBOX) and flag:unread"
-                             "Unread in unified inbox" ?n))
-              (add-to-list 'mu4e-bookmarks
-                           '("maildir:/Defunct/INBOX or maildir:/Termitel/INBOX"
-                             "Unified inbox" ?i))
+                (add-to-list 'mu4e-bookmarks
+                             '("(maildir:/Defunct/INBOX or maildir:/Termitel/INBOX) and flag:unread"
+                               "Unread in unified inbox" ?n))
+                (add-to-list 'mu4e-bookmarks
+                             '("maildir:/Defunct/INBOX or maildir:/Termitel/INBOX"
+                               "Unified inbox" ?i))
 
-              (defun file-string (file)
-                "Read the contents of a file and return as a string."
-                (with-current-buffer (find-file-noselect file)
-                  (buffer-string)))
+                (defun file-string (file)
+                  "Read the contents of a file and return as a string."
+                  (with-current-buffer (find-file-noselect file)
+                    (buffer-string)))
 
-              (defvar my-mu4e-account-alist
-                '(("Defunct"
-                   (mu4e-sent-folder "/Defunct/Sent")
-                   (mu4e-drafts-folder "/Defunct/Drafts")
-                   (mu4e-compose-signature (file-string "~/dev/mail/signature-defunct"))
-                   (user-mail-address "cjk@defunct.ch"))
-                  ("Termitel"
-                   (mu4e-sent-folder "/Termitel/Sent")
-                   (mu4e-drafts-folder "/Termitel/Drafts")
-                   (mu4e-compose-signature (file-string "~/dev/mail/signature-termitel"))
-                   (user-mail-address "c.kruse@termitel.de"))))
+                (defvar my-mu4e-account-alist
+                  '(("Defunct"
+                     (mu4e-sent-folder "/Defunct/Sent")
+                     (mu4e-drafts-folder "/Defunct/Drafts")
+                     (mu4e-compose-signature (file-string "~/dev/mail/signature-defunct"))
+                     (user-mail-address "cjk@defunct.ch"))
+                    ("Termitel"
+                     (mu4e-sent-folder "/Termitel/Sent")
+                     (mu4e-drafts-folder "/Termitel/Drafts")
+                     (mu4e-compose-signature (file-string "~/dev/mail/signature-termitel"))
+                     (user-mail-address "c.kruse@termitel.de"))))
 
-              (defvar my-mu4e-account nil)
+                (defvar my-mu4e-account nil)
 
-              (defun my-mu4e-set-account ()
-                "Set the account for composing a message."
-                (let* ((account
-                        (if mu4e-compose-parent-message
-                            (let ((maildir (mu4e-message-field mu4e-compose-parent-message :maildir)))
-                              (string-match "/\\(.*?\\)/" maildir)
-                              (match-string 1 maildir))
-                          (completing-read (format "Compose with account: (%s) "
-                                                   (mapconcat #'(lambda (var) (car var))
-                                                              my-mu4e-account-alist "/"))
-                                           (mapcar #'(lambda (var) (car var)) my-mu4e-account-alist)
-                                           nil t nil nil (caar my-mu4e-account-alist))))
-                       (account-vars (cdr (assoc account my-mu4e-account-alist))))
-                  (setq mu-mu4e-account account)
-                  (if account-vars
-                      (mapc #'(lambda (var)
-                                (set (car var) (cadr var)))
-                            account-vars)
-                    (error "No email account found"))))
+                (defun my-mu4e-set-account ()
+                  "Set the account for composing a message."
+                  (let* ((account
+                          (if mu4e-compose-parent-message
+                              (let ((maildir (mu4e-message-field mu4e-compose-parent-message :maildir)))
+                                (string-match "/\\(.*?\\)/" maildir)
+                                (match-string 1 maildir))
+                            (completing-read (format "Compose with account: (%s) "
+                                                     (mapconcat #'(lambda (var) (car var))
+                                                                my-mu4e-account-alist "/"))
+                                             (mapcar #'(lambda (var) (car var)) my-mu4e-account-alist)
+                                             nil t nil nil (caar my-mu4e-account-alist))))
+                         (account-vars (cdr (assoc account my-mu4e-account-alist))))
+                    (setq mu-mu4e-account account)
+                    (if account-vars
+                        (mapc #'(lambda (var)
+                                  (set (car var) (cadr var)))
+                              account-vars)
+                      (error "No email account found"))))
 
-              (defun my-mu4e-set-msmtp-account ()
-                (setq message-sendmail-extra-arguments
-                      (list "-a" mu-mu4e-account)))
+                (defun my-mu4e-set-msmtp-account ()
+                  (setq message-sendmail-extra-arguments
+                        (list "-a" mu-mu4e-account)))
 
-              (add-hook 'mu4e-compose-pre-hook 'my-mu4e-set-account)
-              (add-hook 'mu4e-compose-mode-hook 'mml-secure-message-sign-pgpmime)
-              (add-hook 'message-send-mail-hook 'my-mu4e-set-msmtp-account)
+                (add-hook 'mu4e-compose-pre-hook 'my-mu4e-set-account)
+                (add-hook 'mu4e-compose-mode-hook 'mml-secure-message-sign-pgpmime)
+                (add-hook 'message-send-mail-hook 'my-mu4e-set-msmtp-account)
 
-              (defun mu4e/display-stuff-in-browser (stuff)
-                "Displays STUFF as HTML in an external browser."
-                (let ((tmp-file (format "%s/%d.html" temporary-file-directory (random t))))
-                  (with-temp-file tmp-file
+                (defun mu4e/display-stuff-in-browser (stuff)
+                  "Displays STUFF as HTML in an external browser."
+                  (let ((tmp-file (format "%s/%d.html" temporary-file-directory (random t))))
+                    (with-temp-file tmp-file
 
-                    (insert
-                     "<html>"
-                     "<head><meta http-equiv=\"content-type\""
-                     "content=\"text/html;charset=UTF-8\">"
-                     stuff))
-                  (browse-url (concat "file://" tmp-file))))
+                      (insert
+                       "<html>"
+                       "<head><meta http-equiv=\"content-type\""
+                       "content=\"text/html;charset=UTF-8\">"
+                       stuff))
+                    (browse-url (concat "file://" tmp-file))))
 
-              (defun mu4e/msgv-action-view-in-browser (msg)
-                "View the body of the message in an external web browser."
-                (interactive)
-                (let ((html (mu4e-msg-field (mu4e-message-at-point t) :body-html))
+                (defun mu4e/msgv-action-view-in-browser (msg)
+                  "View the body of the message in an external web browser."
+                  (interactive)
+                  (let ((html (mu4e-msg-field (mu4e-message-at-point t) :body-html))
 
-                      (txt (mu4e-message-field msg :body-txt)))
-                  (unless (or html txt)
-                    (mu4e-error "No html part for this message"))
-                  (mu4e/display-stuff-in-browser
-                   (or html (concat "<pre>" txt "</pre>")))))
-
-              (defun mu4e/headerv-action-view-in-browser (msg)
-
-                (interactive)
-                (save-window-excursion
-                  (mu4e-headers-view-message)
-                  (let* ((msg (mu4e-message-at-point))
-                         (html (mu4e-msg-field (mu4e-message-at-point t) :body-html))
-                         (txt (mu4e-message-field msg :body-txt)))
+                        (txt (mu4e-message-field msg :body-txt)))
                     (unless (or html txt)
                       (mu4e-error "No html part for this message"))
                     (mu4e/display-stuff-in-browser
-                     (or html (concat "<pre>" txt "</pre>"))))
-                  (sleep-for 0.1)))
+                     (or html (concat "<pre>" txt "</pre>")))))
 
-              (add-to-list 'mu4e-view-actions
-                           '("browser view" . mu4e/msgv-action-view-in-browser) t)
-              (add-to-list 'mu4e-headers-actions
-                           '("browser view" . mu4e/headerv-action-view-in-browser) t)))
+                (defun mu4e/headerv-action-view-in-browser (msg)
+
+                  (interactive)
+                  (save-window-excursion
+                    (mu4e-headers-view-message)
+                    (let* ((msg (mu4e-message-at-point))
+                           (html (mu4e-msg-field (mu4e-message-at-point t) :body-html))
+                           (txt (mu4e-message-field msg :body-txt)))
+                      (unless (or html txt)
+                        (mu4e-error "No html part for this message"))
+                      (mu4e/display-stuff-in-browser
+                       (or html (concat "<pre>" txt "</pre>"))))
+                    (sleep-for 0.1)))
+
+                (add-to-list 'mu4e-view-actions
+                             '("browser view" . mu4e/msgv-action-view-in-browser) t)
+                (add-to-list 'mu4e-headers-actions
+                             '("browser view" . mu4e/headerv-action-view-in-browser) t))))
 #+end_src
