ref: several magit adjustments

--- a/emacs.org
+++ b/emacs.org
@@ -978,8 +978,10 @@ We want to be able to edit CMake files in a sane way.
               (setq magit-emacsclient-executable "/usr/local/bin/emacsclient")))
     :config (progn
               (add-to-list 'magit-no-confirm 'stage-all-changes)
-              (setq magit-push-always-verify nil)
-              (setq magit-last-seen-setup-instructions "2.1.0")))
+              (setq magit-save-repository-buffers nil
+                    magit-push-always-verify nil
+                    magit-revert-buffers 1
+                    magit-last-seen-setup-instructions "2.1.0")))
 #+end_src
 
 
